# Pong

./: Ball.cpp  Ball.h  CMakeLists.txt  Game.cpp  Game.h  Main.cpp  MiddleLine.cpp  Paddle.h  Pong.sln  Pong.vcxproj  Pong.vcxproj.filters  README.md  Text.cpp  Window.cpp  Window.h
Headers/: MiddleLine.h  Text.h  Window.h
Source/: Game.cpp  Paddle.cpp  Window.cpp
src/: asset_database.cpp  asset_database.h  ball.cpp  ball.h  game.cpp  game.h  global_consts.h  main.cpp  middle_line.cpp  middle_line.h  paddle.cpp  paddle.h  text.cpp  text.h  texture.cpp  texture.h  texture_data.cpp  texture_data.h  unique_ptrs_destructors.cpp  unique_ptrs_destructors.h  window.cpp  window.h
